--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-sm-12">
     <div class="form-group">
-      <input class="form-control" placeholder="请输入商品名称"
+      <input class="form-control" placeholder="请输入商品名称、关键词、关键字"
              [formControl]="titleFilter">
     </div>
   </div>
