--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-navbar></app-navbar>
+<!-- <app-navbar></app-navbar>
 <div class="container">
   <div class="row">
      <div class="col-md-3">
@@ -10,4 +10,8 @@
 
   </div>
 </div>
-<app-footer></app-footer>
+<app-footer></app-footer> -->
+
+<!-- 响应式表单-->
+<app-reactive-form></app-reactive-form>
+<!-- <app-reactive-regist></app-reactive-regist> -->
