响应式表单

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,5 +13,5 @@
 <app-footer></app-footer> -->
 
 <!-- 响应式表单-->
-<app-reactive-form></app-reactive-form>
-<!-- <app-reactive-regist></app-reactive-regist> -->
+<!-- <app-reactive-form></app-reactive-form> -->
+<app-reactive-regist></app-reactive-regist>
