表单验证优化

--- a/src/app/reactive-regist/reactive-regist.component.html
+++ b/src/app/reactive-regist/reactive-regist.component.html
@@ -24,7 +24,7 @@
     </div>
   </div>
   <div [hidden]="!formModel.get('mobile').pending">
-    正在校验手机号是否注册！
+    正在校验手机号合法性！
   </div>
 
   <div formGroupName="passwordsGroup">
